# GhostLink

./: .env  Cargo.toml  README.md
src/: config.rs  main.rs  net.rs
src/messaging/: crypto.rs  handshake.rs  message_manager.rs  mod.rs
src/web/: mod.rs  shared_state.rs  web_server.rs
static/: index.html  script.js  style.css
