[package]
name = "GhostLink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
stun = "0.4" 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.7" 
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] } 
bincode = "1.3"
chrono = "0.4"
dotenv = "0.15.0"
