[package]
name = "GhostLink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
stun = "0.9" 
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8.7" 
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] } 
bincode = "1.3"
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
chrono = "0.4.42"
